# Bimanual_Robot_Project_MuJoCo

./: .gitmodules  README.md  main.py  urdf_to_mjcf.py
Allegro Hand Adapter/: Franka_Allegro_3Fingers_Adapter_v0.SLDPRT  Franka_Allegrohand_v5_Adapter_v1_A_CNC.SLDPRT  Franka_Allegrohand_v5_Adapter_v1_B_CNC.SLDPRT
allegro_hand_ros_v5-3Finger/: README.md
allegro_hand_ros_v5-3Finger/src/allegro_hand_controllers/: CMakeLists.txt  package.xml
allegro_hand_ros_v5-3Finger/src/allegro_hand_controllers/launch/: allegro_hand.launch
allegro_hand_ros_v5-3Finger/src/allegro_hand_controllers/pose/: Readme.md  pose1.yaml  pose_moveit.yaml
allegro_hand_ros_v5-3Finger/src/allegro_hand_controllers/src/: allegro_node.cpp  allegro_node.h  allegro_node_485.cpp  allegro_node_485.h  allegro_node_grasp.cpp  allegro_node_grasp.h
allegro_hand_ros_v5-3Finger/src/allegro_hand_controllers/src/candrv/: candef.h
allegro_hand_ros_v5-3Finger/src/allegro_hand_description/: allegro_hand_config.rviz  allegro_hand_description_3F.urdf
allegro_hand_ros_v5-3Finger/src/allegro_hand_description/meshes/: body.stl  f1.stl
allegro_hand_ros_v5-3Finger/src/allegro_hand_driver/: CMakeLists.txt
allegro_hand_ros_v5-3Finger/src/allegro_hand_driver/include/allegro_hand_driver/: AllegroHandDef.h  AllegroHandDrv.h  AllegroHandRS485Drv.h
allegro_hand_ros_v5-3Finger/src/allegro_hand_driver/src/: AllegroHandDrv.cpp
allegro_hand_ros_v5-3Finger/src/allegro_hand_gui/: CMakeLists.txt  package.xml
allegro_hand_ros_v5-3Finger/src/allegro_hand_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
allegro_hand_ros_v5-3Finger/src/allegro_hand_gui/ui/: mainwindow.ui
allegro_hand_ros_v5-3Finger/src/allegro_hand_keyboard/: CMakeLists.txt  package.xml
allegro_hand_ros_v5-3Finger/src/allegro_hand_keyboard/src/: allegro_hand_keyboard.cpp
allegro_hand_ros_v5-3Finger/src/allegro_hand_moveit/: CMakeLists.txt  package.xml
allegro_hand_ros_v5-3Finger/src/allegro_hand_moveit/config/: allegro_hand_3F.srdf  fake_controllers.yaml  gazebo_allegro_hand_3F.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
allegro_hand_ros_v5-3Finger/src/allegro_hand_moveit/launch/: allegro_hand_moveit.rviz  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
allegro_hand_ros_v5-3Finger/src/allegro_hand_moveit/src/: allegro_joint_subscriber.cpp  save_joint_angles.cpp  text_publisher.cpp
franka_fr3_v2/: fr3v2_left.xml  fr3v2_right.xml  scene.xml
franka_fr3_v2/assets/: f2.stl  f3.stl
mjctrl/: diffik_nullspace.py
wonik_allegro/: right_hand.xml
(+4 files in other folders)
